fixed all img sizes on _works.css img-wrap

--- a/app/assets/styles/abstracts/_flex.css
+++ b/app/assets/styles/abstracts/_flex.css
@@ -32,3 +32,12 @@
     flex-direction: row;
   }
 }
+/*
+.flx-inverted {
+  display: flex;
+  order: 2;
+
+  @mixin atSmall {
+    order: 1;
+  }
+}*/
