--- a/app/assets/styles/layout/_works.css
+++ b/app/assets/styles/layout/_works.css
@@ -21,15 +21,12 @@
 
     .img-wrap {
       width: 100%;
-      height: 0;
-      padding-bottom: 100%;
+      height: auto;
+      padding-bottom: 50%;
       
       @mixin atSmall {
         height: 0;
         margin-bottom: 1.5rem;
-        padding-bottom: 39.14%;
-      }
-      @mixin atMedium {
         padding-bottom: 39.14%;
       }
       
